--- a/.github/workflows/copyfile.yml
+++ b/.github/workflows/copyfile.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config --global user.name "Your Name"
-          git config --global user.email "your-email@example.com"
+          git config --global user.name "lagzian"
+          git config --global user.email "milad.lagzian@gmail.com"
 
       - name: Clone Target Repo
         run: |
