--- a/.github/workflows/Combined_Workflow.yml
+++ b/.github/workflows/Combined_Workflow.yml
@@ -76,9 +76,9 @@ jobs:
           persist-credentials: false
           fetch-depth: 0
 
-      - name: Replace text in Readme2.md
+      - name: Replace text in README.md
         run: |
-          sed -i 's/yebekhe/lagzian/g' repo/Readme.md
+          sed -i 's/yebekhe/lagzian/g' repo/README.md
           cd repo
           git config user.name "lagzian"
           git config user.email "milad.lagzian@gmail.com"
