--- a/.github/workflows/Combined_Workflow.yml
+++ b/.github/workflows/Combined_Workflow.yml
@@ -82,7 +82,7 @@ jobs:
           cd repo
           git config user.name "lagzian"
           git config user.email "milad.lagzian@gmail.com"
-          git add Readme.md
+          git add README.md
 
           # Check if there are any changes to commit
           if git diff-index --quiet HEAD; then
