--- a/.github/workflows/singleWF.yml
+++ b/.github/workflows/singleWF.yml
@@ -1,4 +1,4 @@
-name: Single Workflow
+name: Combined Workflow2
 
 on:
   schedule:
@@ -9,14 +9,6 @@ jobs:
   combined_job:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        include:
-          - job_type: sync_repository
-            step_name: Sync Repository
-          - job_type: edit_readme
-            step_name: Edit README
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -24,40 +16,18 @@ jobs:
       - name: Install dependencies
         run: pip install python-telegram-bot
 
-      # Step for Sync Repository
       - name: Sync repository
-        if: matrix.job_type == 'sync_repository'
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN1 }}
         id: sync
         run: |
           gh repo sync lagzian/TelegramV2rayCollector -b main --force || echo "::set-output name=exit_code::1"
 
-      # Step for Edit README
-      - name: Edit README
-        if: matrix.job_type == 'edit_readme'
+      - name: Send Telegram notification on success or failure
+        if: steps.sync.outputs.exit_code == '0'
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        run: |
-          sed -i 's/yebekhe/lagzian/g' README.md
-          git config user.name "lagzian"
-          git config user.email "milad.lagzian@gmail.com"
-          git add README.md
-
-          # Check if there are any changes to commit
-          if git diff-index --quiet HEAD; then
-            echo "No changes to commit."
-          else
-            git commit -m "Replace 'yebekhe' with 'lagzian'"
-            git remote set-url origin https://${{ secrets.ACCESS_TOKEN }}@github.com/lagzian/TelegramV2rayCollector.git
-            git push origin HEAD:main
-          fi
-
-      # Common steps for both jobs (sending Telegram notifications)
-      - name: Send Telegram notification on success
-        if: steps.sync.outputs.exit_code == '0' && matrix.job_type == 'sync_repository'
         run: |
           python - <<EOF
           import asyncio
@@ -73,19 +43,21 @@ jobs:
           asyncio.run(send_telegram_message())
           EOF
 
-      - name: Send Telegram notification on failure
-        if: steps.sync.outputs.exit_code != '0' && matrix.job_type == 'sync_repository'
+      - name: Edit README
+        if: steps.sync.outputs.exit_code == '0'
+        env:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         run: |
-          python - <<EOF
-          import asyncio
-          from telegram import Bot
+          sed -i 's/yebekhe/lagzian/g' README.md
+          git config user.name "lagzian"
+          git config user.email "milad.lagzian@gmail.com"
+          git add README.md
 
-          async def send_telegram_message():
-              bot_token = '${{ env.TELEGRAM_BOT_TOKEN }}'
-              bot = Bot(token=bot_token)
-              chat_id = '${{ env.TELEGRAM_CHAT_ID }}'
-              message = '❗❗⚠️⚠️ V2ray Repository Sync Failed! ⚠️⚠️❗❗'
-              await bot.send_message(chat_id=chat_id, text=message)
-
-          asyncio.run(send_telegram_message())
-          EOF
+          # Check if there are any changes to commit
+          if git diff-index --quiet HEAD; then
+            echo "No changes to commit."
+          else
+            git commit -m "Replace 'yebekhe' with 'lagzian'"
+            git remote set-url origin https://${{ secrets.ACCESS_TOKEN }}@github.com/lagzian/TelegramV2rayCollector.git
+            git push origin HEAD:main
+          fi
