--- a/.github/workflows/singleWF.yml
+++ b/.github/workflows/singleWF.yml
@@ -43,8 +43,14 @@ jobs:
           asyncio.run(send_telegram_message())
           EOF
 
-      - name: Edit README
+      - name: Check for changes in README
         if: steps.sync.outputs.exit_code == '0'
+        id: check_readme_changes
+        run: |
+          git diff --exit-code README.md || echo "::set-output name=has_changes::true"
+
+      - name: Edit README and Push Changes
+        if: steps.check_readme_changes.outputs.has_changes == 'true'
         env:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         run: |
@@ -52,12 +58,5 @@ jobs:
           git config user.name "lagzian"
           git config user.email "milad.lagzian@gmail.com"
           git add README.md
-
-          # Check if there are any changes to commit
-          if git diff-index --quiet HEAD; then
-            echo "No changes to commit."
-          else
-            git commit -m "Replace 'yebekhe' with 'lagzian'"
-            git remote set-url origin https://${{ secrets.ACCESS_TOKEN }}@github.com/lagzian/TelegramV2rayCollector.git
-            git push origin HEAD:main
-          fi
+          git commit -m "Replace 'yebekhe' with 'lagzian'"
+          git push origin HEAD:main
