--- a/.github/workflows/singleWF.yml
+++ b/.github/workflows/singleWF.yml
@@ -1,4 +1,4 @@
-name: Combined Workflow2
+name: Combined Workflow2 
 
 on:
   schedule:
@@ -6,57 +6,77 @@ on:
   workflow_dispatch:
 
 jobs:
-  combined_job:
+
+  sync_and_notify:
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: pip install python-telegram-bot
+    - name: Install dependencies
+      run: pip install python-telegram-bot
 
-      - name: Sync repository
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN1 }}
-        id: sync
-        run: |
-          gh repo sync lagzian/TelegramV2rayCollector -b main --force || echo "::set-output name=exit_code::1"
+    - name: Sync repository
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      id: sync
+      run: |
+        gh repo sync lagzian/TelegramV2rayCollector -b main --force || echo "::set-output name=exit_code::1"
 
-      - name: Send Telegram notification on success or failure
-        if: steps.sync.outputs.exit_code == '0'
-        env:
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: |
-          python - <<EOF
-          import asyncio
-          from telegram import Bot
+    - name: Send Telegram notification  
+      env:
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+      if: always()
+      run: |
+        python - <<EOF
+        import sys
+        from telegram import Bot
+        
+        bot_token = '${{ env.TELEGRAM_BOT_TOKEN }}'
+        bot = Bot(token=bot_token)
+        chat_id = '${{ env.TELEGRAM_CHAT_ID }}'
+        
+        if sys.argv[1] == '0':
+          message = '✅✅ Repository Updated Successfully! ✅✅'
+        else:  
+          message = '❗❗⚠️⚠️ Repository Update Failed! ⚠️⚠️❗❗'
+        
+        bot.send_message(chat_id=chat_id, text=message)
+        EOF
+        python3 - $STEPS_EXIT_CODE
 
-          async def send_telegram_message():
-              bot_token = '${{ env.TELEGRAM_BOT_TOKEN }}'
-              bot = Bot(token=bot_token)
-              chat_id = '${{ env.TELEGRAM_CHAT_ID }}'
-              message = '✅✅ V2ray Repository Updated Successfully! ✅✅'
-              await bot.send_message(chat_id=chat_id, text=message)
+  update_readme:
 
-          asyncio.run(send_telegram_message())
-          EOF
+    needs: sync_and_notify
 
-      - name: Check for changes in README
-        if: steps.sync.outputs.exit_code == '0'
-        id: check_readme_changes
-        run: |
-          git diff --quiet README.md || echo "has_changes=true" >> $GITHUB_ENV
+    runs-on: ubuntu-latest
 
-      - name: Edit README and Push Changes
-        if: steps.check_readme_changes.outputs.has_changes == 'true'
-        env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        run: |
-          sed -i 's/yebekhe/lagzian/g' README.md
-          git config user.name "lagzian"
-          git config user.email "milad.lagzian@gmail.com"
-          git add README.md
+    steps:
+    
+    - name: Checkout repository
+      uses: actions/checkout@v2
+      with:
+        repository: lagzian/TelegramV2rayCollector
+        path: repo
+        persist-credentials: false
+        fetch-depth: 0
+
+    - name: Replace text in README.md
+      run: |
+        sed -i 's/yebekhe/lagzian/g' repo/README.md
+        cd repo
+        git config user.name "lagzian"
+        git config user.email "milad.lagzian@gmail.com"
+        git add README.md
+
+        if git diff-index --quiet HEAD; then
+          echo "No changes to commit."
+        else
           git commit -m "Replace 'yebekhe' with 'lagzian'"
+          git remote set-url origin https://${{ secrets.ACCESS_TOKEN }}@github.com/lagzian/TelegramV2rayCollector.git
           git push origin HEAD:main
+        fi
