--- a/.github/workflows/new-config-collector.yml
+++ b/.github/workflows/new-config-collector.yml
@@ -21,7 +21,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN1 }}
         id: sync
         run: |
-          gh repo sync lagzian/TVC -b main --force || echo "::set-output name=exit_code::1"
+          gh repo sync lagzian/new-configs-collector -b main --force || echo "::set-output name=exit_code::1"
 
       - name: Send Telegram notification on success
         if: steps.sync.outputs.exit_code == '0'
@@ -71,14 +71,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
-          repository: lagzian/TVC
+          repository: lagzian/new-configs-collector
           path: repo  # Clone the repository to the "repo" directory
           persist-credentials: false
           fetch-depth: 0
 
       - name: Replace text in README.md
         run: |
-          sed -i 's/yebekhe/lagzian/g' repo/README.md
+          sed -i 's/soroushmirzaei/lagzian/g' repo/README.md
           cd repo
           git config user.name ${{ secrets.USER_NAME }}
           git config user.email ${{ secrets.USER_EMAIL }}
@@ -88,7 +88,7 @@ jobs:
           if git diff-index --quiet HEAD; then
             echo "No changes to commit."
           else
-            git commit -m "Replace 'yebekhe' with 'lagzian'"
+            git commit -m "Replace 'soroushmirzaei' with 'lagzian'"
             git remote set-url origin https://${{ secrets.ACCESS_TOKEN }}@github.com/lagzian/TVC.git
             git push origin HEAD:main
           fi
@@ -96,7 +96,7 @@ jobs:
       - name: Replace text in README.md again
         if: success()
         run: |
-          sed -i 's/lagzian.link/yebekhe.link/g' repo/README.md
+          sed -i 's/telegram-configs-collector/new-configs-collector/g' repo/README.md
           cd repo
           git config user.name ${{ secrets.USER_NAME }}
           git config user.email ${{ secrets.USER_EMAIL }}
@@ -106,7 +106,7 @@ jobs:
           if git diff-index --quiet HEAD; then
             echo "No changes to commit."
           else
-            git commit -m "Replace 'lagzian.link' with 'yebekhe.link'"
+            git commit -m "Replace 'telegram-configs-collector' with 'new-configs-collector'"
             git remote set-url origin https://${{ secrets.ACCESS_TOKEN }}@github.com/lagzian/TVC.git
             git push origin HEAD:main
           fi
