--- a/.github/workflows/new-config-collector.yml
+++ b/.github/workflows/new-config-collector.yml
@@ -94,9 +94,9 @@ jobs:
               bot = Bot(token=bot_token)
               chat_id = '${{ env.TELEGRAM_CHAT_ID }}'
               if '${{ needs.sync_repository.result }}' == 'failure':
-                  message = '❗❗⚠️⚠️🔥 V2ray Repository Sync Failed! 🔥⚠️⚠️❗❗'
+                  message = '❗❗⚠️⚠️🔥 NEW-V2ray Repository Sync Failed! 🔥⚠️⚠️❗❗'
               else:
-                  message = '✅✅🔥 New V2ray Repo Updated Successfully! 🔥✅✅'
+                  message = '✅✅🔥 New-V2ray Repo Updated Successfully! 🔥✅✅'
               await bot.send_message(chat_id=chat_id, text=message)
 
           asyncio.run(send_telegram_message())
